# qpmu

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  GridMenu.qml  InputField.qml  Monitor.qml  PhasorView.qml  README.md  WaveformView.qml  adc_server.py  adc_simulator.py  appmainwindow.cpp  appmainwindow.h  icons.qrc  main.cpp  main.qml  main_window.cpp  main_window.h  mainwindow.cpp  mainwindow.h  phasor_view.cpp  phasor_view.h  phasorpolarview.cpp  phasorview.cpp  phasorview.h  qml.qrc  qpmu.ini  run-on-device.sh  run.sh  signal_info_model.h  signal_list_model.h  vcpkg.json  waveform_view.cpp  waveform_view.h  waveformview.cpp  waveformview.h  worker.cpp  worker.h
app/: CMakeLists.txt
app/img/: .qrc
app/src/: app.cpp  app.h  data_processor.cpp  data_processor.h  main.cpp  main_window.cpp  main_window.h  monitor_view.cpp  monitor_view.h  oscilloscope.cpp  oscilloscope.h  phasor_monitor.cpp  phasor_monitor.h  phasor_sender.cpp  phasor_sender.h  phasor_server.cpp  phasor_server.h  phasor_view.cpp  phasor_view.h  settings_models.cpp  settings_models.h  settings_widget.cpp  settings_widget.h  util.cpp  util.h  waveform_view.cpp  waveform_view.h  worker.cpp  worker.h
backend/: defs.h  estimator  main.cpp  phasorestimator.cpp  phasorestimator.h  test_client  test_client.cpp
cmake/: FFTW.cmake  GoogleTest.cmake  OpenC37118.cmake  Qt.cmake
common/: CMakeLists.txt
common/include/: adc_sample.h  measurement.h  signal_info.h  signal_info_model.h
common/include/qpmu/: common.h  defs.h  util.h
common/src/: adc_sample.cpp  common.cpp  measurement.cpp  util.cpp
core/: CMakeLists.txt
core/include/qpmu/: core.h
core/include/qpmu/algorithms/: linear_algebra.hpp  linear_algebra.test.cpp  minmax_heap.hpp  minmax_heap.test.cpp
core/include/qpmu/containers/: sliding_mmm.hpp  sliding_mmm.test.cpp
core/include/qpmu/ieee_c37_118/: frames.hpp  params.hpp
core/include/qpmu/utilities/: modulo.hpp
core/src/: daq.cpp  dsp.cpp  main.cpp
data/2025-03-23/processed/: 120V-0W-0Var.csv  120V-0W-1000Var.csv  120V-0W-2000Var.csv  120V-0W-3000Var.csv  120V-1000W-0Var.csv  120V-1000W-1000Var.csv  120V-1000W-2000Var.csv  120V-1000W-3000Var.csv  120V-2000W-0Var.csv  120V-2000W-1000Var.csv  120V-2000W-2000Var.csv  120V-2000W-3000Var.csv  120V-3000W-0Var.csv  120V-3000W-1000Var.csv  120V-3000W-2000Var.csv  120V-3000W-3000Var.csv  180V-0W-0Var.csv  180V-0W-1000Var.csv  180V-0W-2000Var.csv  180V-0W-3000Var.csv  180V-1000W-0Var.csv  180V-1000W-1000Var.csv  180V-1000W-2000Var.csv  180V-1000W-3000Var.csv  180V-2000W-0Var.csv  180V-2000W-1000Var.csv  180V-2000W-2000Var.csv  180V-2000W-3000Var.csv  180V-3000W-0Var.csv  180V-3000W-1000Var.csv  180V-3000W-2000Var.csv  180V-3000W-3000Var.csv  60V-0W-0Var.csv  60V-0W-1000Var.csv  60V-0W-2000Var.csv  60V-0W-3000Var.csv  60V-1000W-0Var.csv  60V-1000W-1000Var.csv  60V-1000W-2000Var.csv  60V-1000W-3000Var.csv  (+8 more)
data/2025-03-23/sampled/: 120V-0W-0Var.txt  120V-0W-1000Var.txt  120V-0W-2000Var.txt  120V-0W-3000Var.txt  120V-1000W-0Var.txt  120V-1000W-1000Var.txt  120V-1000W-2000Var.txt  120V-1000W-3000Var.txt  120V-2000W-0Var.txt  120V-2000W-1000Var.txt  120V-2000W-2000Var.txt  120V-2000W-3000Var.txt  120V-3000W-0Var.txt  120V-3000W-1000Var.txt  120V-3000W-2000Var.txt  120V-3000W-3000Var.txt  180V-0W-0Var.txt  180V-0W-1000Var.txt  180V-0W-2000Var.txt  180V-0W-3000Var.txt  180V-1000W-0Var.txt  180V-1000W-1000Var.txt  180V-1000W-2000Var.txt  180V-1000W-3000Var.txt  180V-2000W-0Var.txt  180V-2000W-1000Var.txt  180V-2000W-2000Var.txt  180V-2000W-3000Var.txt  180V-3000W-0Var.txt  180V-3000W-1000Var.txt  180V-3000W-2000Var.txt  180V-3000W-3000Var.txt  60V-0W-0Var.txt  60V-0W-1000Var.txt  60V-0W-2000Var.txt  60V-0W-3000Var.txt  60V-1000W-0Var.txt  60V-1000W-1000Var.txt  60V-1000W-2000Var.txt  60V-1000W-3000Var.txt  (+8 more)
estimation/: CMakeLists.txt
estimation-new/: CMakeLists.txt
estimation-new/include/estimator/: szcc.hpp
estimation/include/qpmu/: estimator.h
estimation/src/: estimator.cpp
estimator/: CMakeLists.txt
estimator/include/estimator/: sdft.hpp
estimator/include/qpmu/: estimator.h
estimator/src/: estimator.cpp  main.cpp
estimator/tests/: szcc_test.cpp
gui/: CMakeLists.txt
gui/img/: .qrc
gui/src/: equally_scaled_axes_chart.cpp  equally_scaled_axes_chart.h  fixed_aspect_ratio_chart.cpp  fixed_aspect_ratio_chart.h  main.cpp  main_window.cpp  main_window.h  monitor_view.cpp  monitor_view.h  phasor_view.cpp  phasor_view.h  timeout_notifier.cpp  util.cpp  util.h  waveform_view.cpp  waveform_view.h  worker.cpp  worker.h
pmu-adc-simulator/: adc_client.py  adc_server.py  adc_simulator.py  main.py
qpmu-gui/: CMakeLists.txt  icons.qrc  phasor_view.cpp  waveform_view.cpp
qpmu-simulators/: adc_simulator.py
qpmu/app/: CMakeLists.txt
qpmu/app/img/: .qrc
qpmu/app/src/: app.cpp  app.h  calibration_dialog.cpp  calibration_dialog.h  data_observer.cpp  data_observer.h  data_processor.cpp  util.h  (+23 more)
qpmu/common/: CMakeLists.txt
qpmu/sampling/: simulator.py
scripts/: adc_simulator.py
simulator/: CMakeLists.txt
simulator/src/: main.cpp
simulators/: CMakeLists.txt  test_adc_simulator.py
simulators/data/: 120v-3kw.csv  180v-3kw.csv  240v-1kw.csv  240v-3kw.csv
simulators/src/: adc_simulator.cpp
sources/: AdcDataModel.cpp  AdcDataModel.h  AdcSampleModel.cpp  AdcSampleModel.h  App.cpp  App.h  MainWindow.cpp  MainWindow.h  SignalInfo.cpp  SignalInfo.h  SignalInfoModel.cpp  SignalInfoModel.h  VisibilityControlView.cpp  VisibilityControlView.h  WaveformView.cpp  WaveformView.h  WithDock.cpp  WithDock.h  main.cpp
src/: abstractphasorview.cpp  abstractphasorview.h  adc_simulator.py  appcentralwidget.cpp  appcentralwidget.h  appdockwidget.cpp  appdockwidget.h  appmainmenu.cpp  appmainmenu.h  appmainwindow.h  appstatusbar.cpp  appstatusbar.h  apptoolbar.cpp  apptoolbar.h  icons.qrc  main.cpp  phasor.cpp  phasor.h  phasorpolarview.cpp  phasorpolarview.h  phasorwaveview.cpp  phasorwaveview.h  pmu-gui.pro  pmu.cpp  pmu.h  rawdatareader.cpp  rawdatareader.h
test/adc-simulator/: adc.py  main.py
tools/adc-simulator/: adc.py  main.py
(+15 files in other folders)
